# ROS_Diff_drive_with_waypoint

./: .rosinstall  additional_package.txt
bogie_bringup/: CMakeLists.txt  package.xml
bogie_bringup/launch/: bringup.launch  check_angular.launch  check_linear.launch  pid_set.launch  test.launch
bogie_bringup/rviz/: bringup.rviz
bogie_bringup/scripts/: pose_to_odom.py  rc_direct_control.py  teleop_key.py
bogie_bringup/src/: base_controller.cpp
bogie_camera/: CMakeLists.txt  package.xml
bogie_camera/src/: qr.py
bogie_contest/: CMakeLists.txt  package.xml
bogie_contest/launch/: contest.launch
bogie_contest/src/: demo copy.py  demo.py  led.py  qr.py
bogie_description/: CMakeLists.txt  package.xml
bogie_description/launch/: bogie_description.launch  controller.launch  controller.yaml  display.launch  gazebo.launch
bogie_description/meshes/: base_laser_link.stl  base_link.stl  imu_link.stl  left_wheel.stl  right_wheel.stl
bogie_description/urdf/: bogie.gazebo  bogie.trans  bogie.xacro  materials.xacro
bogie_navigation/: CMakeLists.txt  package.xml
bogie_navigation/launch/: amcl.launch  auto.launch  mapping.launch  move_base.launch  navigation.launch
bogie_navigation/map/: map.yaml
bogie_navigation/scripts/: send_goal.py
bogie_ps2/: CMakeLists.txt  package.xml
bogie_ps2/src/: ps2.py
imu_module/: CMakeLists.txt  package.xml
imu_module/launch/: imu_read.launch
imu_module/src/: serial_imu.cpp
test/: test
turtle_sim/: CMakeLists.txt  package.xml
turtle_sim/launch/: sim_mapping.launch  sim_navigation.launch
(+11 files in other folders)
